--- a/My_web.html
+++ b/My_web.html
@@ -64,7 +64,7 @@
                             <p class="card-text">
                                 Este site foi criado para apresentar meus projetos, experiências e trajetória como desenvolvedor. Utilizei HTML, CSS, Bootstrap e animações com GSAP, contando principalmente com o GitHub Copilot como assistente no desenvolvimento.
                             </p>
-                            <a href="https://github.com/IgorLuna06" target="_blank" class="btn btn-outline-info">Ver no GitHub</a>
+                            <a href="https://github.com/igorluna06/Projetos-em-Destaques/blob/main/My_web.html" target="_blank" class="btn btn-outline-info">Ver no GitHub</a>
                         </div>
                     </div>
                 </div>
