--- a/My_web.html
+++ b/My_web.html
@@ -260,6 +260,16 @@
             });
         });
     </script>
+    <script>
+// Corrige o ícone do botão hamburguer para três barras customizadas
+        document.addEventListener("DOMContentLoaded", function() {
+            var togglerIcon = document.querySelector('.navbar-toggler-icon');
+            if (togglerIcon && !togglerIcon.querySelector('span')) {
+            var span = document.createElement('span');
+            togglerIcon.appendChild(span);
+    }
+});
+</script>
     <style>
         body {
             font-family: 'Fira Mono', 'Consolas', 'Menlo', monospace;
@@ -706,3 +716,61 @@
     </style>
 </body>
 </html>
+
+<style>
+/* Estilização personalizada para o botão do menu hamburguer (navbar-toggler) */
+@media (max-width: 991.98px) {
+    .navbar-toggler {
+        border: none;
+        background: #232526 !important;
+        border-radius: 10px;
+        padding: 8px 14px;
+        box-shadow: 0 2px 8px #007bff22;
+        transition: background 0.2s, box-shadow 0.2s, transform 0.18s;
+        outline: none;
+        position: relative;
+    }
+    .navbar-toggler:focus,
+    .navbar-toggler:hover {
+        background: #007bff !important;
+        box-shadow: 0 4px 16px #007bff44;
+        transform: scale(1.07);
+    }
+    .navbar-toggler-icon {
+        background-image: none !important;
+        width: 28px;
+        height: 22px;
+        display: inline-block;
+        position: relative;
+    }
+    .navbar-toggler-icon::before,
+    .navbar-toggler-icon::after,
+    .navbar-toggler-icon span {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background: #61dafb;
+        transition: all 0.3s;
+    }
+    .navbar-toggler-icon::before {
+        top: 0;
+    }
+    .navbar-toggler-icon span {
+        top: 9px;
+    }
+    .navbar-toggler-icon::after {
+        bottom: 0;
+    }
+    /* Corrige o span central */
+    .navbar-toggler-icon span {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+    }
+}
+</style>
