--- a/My_web.html
+++ b/My_web.html
@@ -74,6 +74,16 @@
                     </div>
                 </div>
                 <!-- Adicione mais projetos aqui futuramente -->
+                <div class="col-md-6 mb-4">
+                    <div class="card bg-dark text-light shadow-lg h-100 slide-in">
+                        <div class="card-body">
+                            <h5 class="card-title">Ebook: Python - Amor à Primeira Linha</h5>
+                            <p class="card-text">
+                                Ebook introdutório sobre Python, criado a partir de experiências com Inteligência Artificial e técnicas de prompt engineering. O conteúdo foi desenvolvido para facilitar o aprendizado de iniciantes, mostrando como a IA pode potencializar o estudo de programação.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="d-flex justify-content-center mt-4 mb-2">
                 <a href="https://github.com/igorluna06/Projetos-em-Destaques" target="_blank"
